...
      </View>

      <FlatList
        data={[{ name: "Add Item" }, ...expenses]}
        renderItem={({ item, index }) => (
          index === 0 ? (
            <TouchableOpacity testID="addExpenseButton" onPress={() => setModalVisible(true)}>
              <View style={styles.addItemBtn}>
                <Feather name="plus" size={22} color="#ccc" />
              </View>
            </TouchableOpacity>
          ) : (
            <View style={[styles.expenseBlock, { backgroundColor: item.color }]} testID={`expenseItem-${item.ExpenseID}`}>
...
