appId: com.dineshbali18.expensetrackerapp
---
- launchApp

- tapOn: "Sign in"

- tapOn:
    id: "emailInput"
- inputText:
    id: "emailInput"
    text: "dineshbali45@gmail.com"

- tapOn:
    id: "passwordInput"
- inputText:
    id: "passwordInput"
    text: "gamer45"

- tapOn: "Login"

- tapOn: "OK"

- assertVisible: "🔐 Two-Factor Authentication"

- tapOn:
    id: "otpInput"
- inputText:
    id: "otpInput"
    text: "123456"

- tapOn:
    id: "verifyOtpButton"

- tapOn: "Ok"

- assertVisible: "Saving Goal"

- tapOn: "Saving Goal"

- tapOn:
    id: "openManageGoalsModal"

- tapOn:
    id: "savingGoalPicker"

- tapOn: "➕ Add New Goal"

- tapOn: "🏆 Goal Name"

- inputText:
    id: "goalNameInput"
    text: "Vacation"

- tapOn: "💵 Current Saved Amount"

- inputText:
    id: "currentAmountInput"
    text: "500"
- tapOn: "🎯 Total Savings Goal"
- inputText:
    id: "totalGoalInput"
    text: "2000"

- tapOn:
    id: "submitGoalButton"
- assertVisible: "✅ Add Goal"
- tapOn: "✅ Add Goal"

- assertVisible: "🎯 Vacation: $500 / $2000.00 (25%)"

- tapOn:
    id: "savingGoalPicker"

- tapOn: "Vacation"

- tapOn: "Vacation"

- tapOn:
    id: "goalNameInput"
- eraseText
- inputText:
    id: "goalNameInput"
    text: "Trip"

- tapOn: "500"
- tapOn:
    id: "currentAmountInput"
- eraseText
- inputText:
    id: "currentAmountInput"
    text: "1000"

- tapOn:
    id: "submitGoalButton"
- assertVisible: "🔄 Update Goal"
- tapOn: "🔄 Update Goal"

- assertVisible: "🎯 Trip: $1000 / $2000.00 (50%)"


- tapOn:
    id: "deleteGoal-69"
- assertVisible: "🔄 Update Goal"
- tapOn: "🔄 Update Goal"

- assertNotVisible: "Trip"

- tapOn:
    id: "closeSavingGoals"
